# notifish

./: .gitignore  CMakeLists.txt
include/: notifish.h
src/: notifish.cpp
